--- a/ProjektSemestralny2/App.config
+++ b/ProjektSemestralny2/App.config
@@ -13,8 +13,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MotoryzacjaEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Motoryzacja;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MotoryzacjaEntities1" connectionString="metadata=res://*/MotoryzacjaModel.csdl|res://*/MotoryzacjaModel.ssdl|res://*/MotoryzacjaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Motoryzacja;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MotoryzacjaEntities2" connectionString="metadata=res://*/MotoryzacjaModel.csdl|res://*/MotoryzacjaModel.ssdl|res://*/MotoryzacjaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Motoryzacja;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="MotoryzacjaDBContext"
+			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Motoryzacja;Integrated Security=SSPI;"
+			 providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
