--- a/ProjektSemestralny2/ProjektSemestralny.csproj
+++ b/ProjektSemestralny2/ProjektSemestralny.csproj
@@ -67,34 +67,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Cars.cs">
-      <DependentUpon>MotoryzacjaModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Colors.cs">
-      <DependentUpon>MotoryzacjaModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Engines.cs">
-      <DependentUpon>MotoryzacjaModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MotoryzacjaModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MotoryzacjaModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MotoryzacjaModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MotoryzacjaModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MotoryzacjaModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MotoryzacjaModel.edmx</DependentUpon>
-    </Compile>
+    <Compile Include="Database\Models\Cars.cs" />
+    <Compile Include="Database\Models\Colors.cs" />
+    <Compile Include="Database\Models\Engines.cs" />
+    <Compile Include="Database\Models\States.cs" />
+    <Compile Include="Database\MotoryzacjaDBContext.cs" />
     <Compile Include="State.cs" />
-    <Compile Include="States.cs">
-      <DependentUpon>MotoryzacjaModel.tt</DependentUpon>
-    </Compile>
     <Page Include="Add.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -151,13 +129,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EntityDeploy Include="MotoryzacjaModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MotoryzacjaModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="MotoryzacjaModel.edmx.diagram">
-      <DependentUpon>MotoryzacjaModel.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -169,18 +140,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="MotoryzacjaModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MotoryzacjaModel.edmx</DependentUpon>
-      <LastGenOutput>MotoryzacjaModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="MotoryzacjaModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MotoryzacjaModel.edmx</DependentUpon>
-      <LastGenOutput>MotoryzacjaModel.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
